<resources>
    <string name="app_name">eWaris</string>

    <string name="hint_et_duit">masukan nominal uang. Contoh: 10.000.0000</string>

    <string name="hint_et_jml">masukan jumlah ahli waris. Contoh: 1,2,3 dst</string>

    <string name="notif_cucu">Cucu laki-laki terhalang oleh anak laki-laki</string>

    <string name="descIlmuFaraidh">Ilmu Faraid merupakan ilmu yang mempelajari warisan dan bagian-bagian yang ditentukan bagi mereka (Ahli Waris), serta tata cara membagi harta warisan bagi orang-orang yang berhak mendapatkannya. Ilmu Faraid merupakan nama lain dari Ilmu Waris</string>
    <string name="descWFaraidh">Faraid secara bahasa artinya ialah ketentuan. Menurut istilah faraid artinya bagian bagi ahli waris yang telah ditentukan</string>
    <string name="descHukumFaraidh">Hukum mempelajari Ilmu Faraid ialah Fardlu Kifayah. Apabila ada seseorang diantara suatu penduduk yang sudah mempelajarinya, maka gugur kewajiban bagi seluruh penduduk tersebut.</string>

    <string name="ayat1">QS. An-Nisa:11</string>
    <string name="annisa11">يُوصِيكُمُ اللَّهُ فِي أَوْلَادِكُمْ ۖ لِلذَّكَرِ مِثْلُ حَظِّ الْأُنْثَيَيْنِ ۚ فَإِنْ كُنَّ نِسَاءً فَوْقَ اثْنَتَيْنِ فَلَهُنَّ ثُلُثَا مَا تَرَكَ ۖ وَإِنْ كَانَتْ وَاحِدَةً فَلَهَا النِّصْفُ ۚ وَلِأَبَوَيْهِ لِكُلِّ وَاحِدٍ مِنْهُمَا السُّدُسُ مِمَّا تَرَكَ إِنْ كَانَ لَهُ وَلَدٌ ۚ فَإِنْ لَمْ يَكُنْ لَهُ وَلَدٌ وَوَرِثَهُ أَبَوَاهُ فَلِأُمِّهِ الثُّلُثُ ۚ فَإِنْ كَانَ لَهُ إِخْوَةٌ فَلِأُمِّهِ السُّدُسُ ۚ مِنْ بَعْدِ وَصِيَّةٍ يُوصِي بِهَا أَوْ دَيْنٍ ۗ آبَاؤُكُمْ وَأَبْنَاؤُكُمْ لَا تَدْرُونَ أَيُّهُمْ أَقْرَبُ لَكُمْ نَفْعًا ۚ فَرِيضَةً مِنَ اللَّهِ ۗ إِنَّ اللَّهَ كَانَ عَلِيمًا حَكِيمًا </string>
    <string name="trjm_ayat1">Artinya :
        Allah mensyari\'atkan bagimu tentang (pembagian pusaka untuk) anak-anakmu. Yaitu: bahagian seorang anak lelaki sama dengan bagahian dua orang anak perempuan; dan jika anak itu semuanya perempuan lebih dari dua, maka bagi mereka dua pertiga dari harta yang ditinggalkan; jika anak perempuan itu seorang saja, maka ia memperoleh separo harta. Dan untuk dua orang ibu-bapa, bagi masing-masingnya seperenam dari harta yang ditinggalkan, jika yang meninggal itu mempunyai anak; jika orang yang meninggal tidak mempunyai anak dan ia diwarisi oleh ibu-bapanya (saja), maka ibunya mendapat sepertiga; jika yang meninggal itu mempunyai beberapa saudara, maka ibunya mendapat seperenam. (Pembagian-pembagian tersebut di atas) sesudah dipenuhi wasiat yang ia buat atau (dan) sesudah dibayar hutangnya. (Tentang) orang tuamu dan anak-anakmu, kamu tidak mengetahui siapa di antara mereka yang lebih dekat (banyak) manfaatnya bagimu. Ini adalah ketetapan dari Allah. Sesungguhnya Allah Maha Mengetahui lagi Maha Bijaksana (An Nisa:11).</string>

    <string name="ayat2">QS. An-Nisa:12</string>
    <string name="annisa12">  وَلَكُمْ نِصْفُ مَا تَرَكَ أَزْوَاجُكُمْ إِنْ لَمْ يَكُنْ لَهُنَّ وَلَدٌ ۚ فَإِنْ كَانَ لَهُنَّ وَلَدٌ فَلَكُمُ الرُّبُعُ مِمَّا تَرَكْنَ ۚ مِنْ بَعْدِ وَصِيَّةٍ يُوصِينَ بِهَا أَوْ دَيْنٍ ۚ وَلَهُنَّ الرُّبُعُ مِمَّا تَرَكْتُمْ إِنْ لَمْ يَكُنْ لَكُمْ وَلَدٌ ۚ فَإِنْ كَانَ لَكُمْ وَلَدٌ فَلَهُنَّ الثُّمُنُ مِمَّا تَرَكْتُمْ ۚ مِنْ بَعْدِ وَصِيَّةٍ تُوصُونَ بِهَا أَوْ دَيْنٍ ۗ وَإِنْ كَانَ رَجُلٌ يُورَثُ كَلَالَةً أَوِ امْرَأَةٌ وَلَهُ أَخٌ أَوْ أُخْتٌ فَلِكُلِّ وَاحِدٍ مِنْهُمَا السُّدُسُ ۚ فَإِنْ كَانُوا أَكْثَرَ مِنْ ذَٰلِكَ فَهُمْ شُرَكَاءُ فِي الثُّلُثِ ۚ مِنْ بَعْدِ وَصِيَّةٍ يُوصَىٰ بِهَا أَوْ دَيْنٍ غَيْرَ مُضَارٍّ ۚ وَصِيَّةً مِنَ اللَّهِ ۗ وَاللَّهُ عَلِيمٌ حَلِيمٌ</string>
    <string name="trjm_ayat2">Artinya :
    Dan bagimu (suami-suami) seperdua dari harta yang ditinggalkan oleh isteri-isterimu, jika mereka tidak mempunyai anak. Jika isteri-isterimu itu mempunyai anak, maka kamu mendapat seperempat dari harta yang ditinggalkannya sesudah dipenuhi wasiat yang mereka buat atau (dan) seduah dibayar hutangnya. Para isteri memperoleh seperempat harta yang kamu tinggalkan jika kamu tidak mempunyai anak. Jika kamu mempunyai anak, maka para isteri memperoleh seperdelapan dari harta yang kamu tinggalkan sesudah dipenuhi wasiat yang kamu buat atau (dan) sesudah dibayar hutang-hutangmu. Jika seseorang mati, baik laki-laki maupun perempuan yang tidak meninggalkan ayah dan tidak meninggalkan anak, tetapi mempunyai seorang saudara laki-laki (seibu saja) atau seorang saudara perempuan (seibu saja), maka bagi masing-masing dari kedua jenis saudara itu seperenam harta. Tetapi jika saudara-saudara seibu itu lebih dari seorang, maka mereka bersekutu dalam yang sepertiga itu, sesudah dipenuhi wasiat yang dibuat olehnya atau sesudah dibayar hutangnya dengan tidak memberi mudharat (kepada ahli waris). (Allah menetapkan yang demikian itu sebagai) syari\'at yang benar-benar dari Allah, dan Allah Maha Mengetahui lagi Maha Penyantun (An Nisa:12).</string>

    <string name="ayat3">QS. An-Nisa:176</string>
    <string name="annisa176">يَسْتَفْتُونَكَ قُلِ اللَّهُ يُفْتِيكُمْ فِي الْكَلَالَةِ ۚ إِنِ امْرُؤٌ هَلَكَ لَيْسَ لَهُ وَلَدٌ وَلَهُ أُخْتٌ فَلَهَا نِصْفُ مَا تَرَكَ ۚ وَهُوَ يَرِثُهَا إِن لَّمْ يَكُن لَّهَا وَلَدٌ ۚ فَإِن كَانَتَا اثْنَتَيْنِ فَلَهُمَا الثُّلُثَانِ مِمَّا تَرَكَ ۚ وَإِن كَانُوا إِخْوَةً رِّجَالًا وَنِسَاءً فَلِلذَّكَرِ مِثْلُ حَظِّ الْأُنثَيَيْنِ ۗ يُبَيِّنُ اللَّهُ لَكُمْ أَن تَضِلُّوا ۗ وَاللَّهُ بِكُلِّ شَيْءٍ عَلِيمٌ</string>
    <string name="trjm_ayat3">Artinya :
        Mereka meminta fatwa kepadamu (tentang kalalah). Katakanlah: "Allah memberi fatwa kepadamu tentang kalalah (yaitu): jika seorang meninggal dunia, dan ia tidak mempunyai anak dan mempunyai saudara perempuan, maka bagi saudaranya yang perempuan itu seperdua dari harta yang ditinggalkannya, dan saudaranya yang laki-laki mempusakai (seluruh harta saudara perempuan), jika ia tidak mempunyai anak; tetapi jika saudara perempuan itu dua orang, maka bagi keduanya dua pertiga dari harta yang ditinggalkan oleh yang meninggal. Dan jika mereka (ahli waris itu terdiri dari) saudara-saudara laki dan perempuan, maka bahagian seorang saudara laki-laki sebanyak bahagian dua orang saudara perempuan. Allah menerangkan (hukum ini) kepadamu, supaya kamu tidak sesat. Dan Allah Maha Mengetahui segala sesuatu (An Nisa:176).</string>
    <string name="trjm_ayat4" translatable="false"></string>

    <string name="hadits1">حَدَّثَنَا مُوسَى بْنُ إِسْمَاعِيلَ حَدَّثَنَا وُهَيْبٌ حَدَّثَنَا ابْنُ طَاوُسٍ عَنْ أَبِيهِ عَنْ ابْنِ عَبَّاسٍ رَضِيَ اللَّهُ عَنْهُمَا عَنْ النَّبِيِّ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ قَالَ أَلْحِقُوا الْفَرَائِضَ بِأَهْلِهَا فَمَا بَقِيَ فَهُوَ لِأَوْلَى رَجُلٍ ذَكَرٍ</string>
    <string name="trjm_hadits1">(BUKHARI – 6235) : Telah menceritakan kepada kami Musa bin Isma’il telah menceritakan kepada kami Wuhaib telah menceritakan kepada kami Ibnu Thawus dari ayahnya dari Ibnu ‘Abbas radliallahu ‘anhuma, dari Nabi  bersabda: “Berikanlah bagian fara`idh (warisan yang telah ditetapkan) kepada yang berhak, maka bagian yang tersisa bagi pewaris lelaki yang paling dekat (nasabnya).”</string>

    <string name="hadits2">حَدَّثَنَا مَحْمُودُ بْنُ غَيْلَانَ حَدَّثَنَا أَبُو النَّضْرِ حَدَّثَنَا أَبُو مُعَاوِيَةَ شَيْبَانُ عَنْ أَشْعَثَ عَنْ الْأَسْوَدِ بْنِ يَزِيدَ قَالَ أَتَانَا مُعَاذُ بْنُ جَبَلٍ بِالْيَمَنِ مُعَلِّمًا وَأَمِيرًا فَسَأَلْنَاهُ عَنْ رَجُلٍ تُوُفِّيَ وَتَرَكَ ابْنَتَهُ وَأُخْتَهُ فَأَعْطَى الِابْنَةَ النِّصْفَ وَالْأُخْتَ النِّصْفَ</string>
    <string name="trjm_hadits2">(BUKHARI – 6237) : Telah menceritakan kepada kami Mahmud bin Ghailan telah menceritakan kepada kami Abu An Nadhr telah menceritakan kepada kami Abu Mu’awiyah Syaiban dari Asy’ats dari Al Aswad bin Yazid mengatakan; Muadz bin Jabal datang kepada kami di Yaman sebagai pengajar dan pemimpin, kemudian kami bertanya kepadanya mengenai seseorang yang wafat dan meninggalkan anak perempuan dan saudara perempuannya. maka dia memberi anak perempuannya separoh dan saudara perempuannya separoh.</string>

    <string name="hadits3">حَدَّثَنَا مُسْلِمُ بْنُ إِبْرَاهِيمَ حَدَّثَنَا وُهَيْبٌ حَدَّثَنَا ابْنُ طَاوُسٍ عَنْ أَبِيهِ عَنْ ابْنِ عَبَّاسٍ قَالَ قَالَ رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ أَلْحِقُوا الْفَرَائِضَ بِأَهْلِهَا فَمَا بَقِيَ فَهُوَ لِأَوْلَى رَجُلٍ ذَكَرٍ</string>
    <string name="trjm_hadits3">(BUKHARI – 6238) : Telah menceritakan kepada kami Muslim bin Ibrahim telah menceritakan kepada kami Wuhaib telah menceritakan kepada kami Ibnu Thawus dari ayahnya dari Ibnu ‘Abbas mengatakan, Rasulullah  bersabda: “Berikanlah bagian fara`idh (warisan yang telah ditetapkan) kepada yang berhak, maka bagian yang tersisa bagi pewaris lelaki yang paling dekat (nasabnya).”</string>

    <string name="hadits4">حَدَّثَنَا آدَمُ حَدَّثَنَا شُعْبَةُ حَدَّثَنَا أَبُو قَيْسٍ سَمِعْتُ هُزَيْلَ بْنَ شُرَحْبِيلَ قَالَ سُئِلَ أَبُو مُوسَى عَنْ بِنْتٍ وَابْنَةِ ابْنٍ وَأُخْتٍ فَقَالَ لِلْبِنْتِ النِّصْفُ وَلِلْأُخْتِ النِّصْفُ وَأْتِ ابْنَ مَسْعُودٍ فَسَيُتَابِعُنِي فَسُئِلَ ابْنُ مَسْعُودٍ وَأُخْبِرَ بِقَوْلِ أَبِي مُوسَى فَقَالَ لَقَدْ ضَلَلْتُ إِذًا وَمَا أَنَا مِنْ الْمُهْتَدِينَ أَقْضِي فِيهَا بِمَا قَضَى النَّبِيُّ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ لِلْابْنَةِ النِّصْفُ وَلِابْنَةِ ابْنٍ السُّدُسُ تَكْمِلَةَ الثُّلُثَيْنِ وَمَا بَقِيَ فَلِلْأُخْتِ فَأَتَيْنَا أَبَا مُوسَى فَأَخْبَرْنَاهُ بِقَوْلِ ابْنِ مَسْعُودٍ فَقَالَ لَا تَسْأَلُونِي مَا دَامَ هَذَا الْحَبْرُ فِيكُمْ</string>
    <string name="trjm_hadits4">(BUKHARI – 6239) : Telah menceritakan kepada kami Adam telah menceritakan kepada kami Syu’bah telah menceritakan kepada kami Abu Qais aku mendengar Huzail bin Syurahbil mengatakan, Abu Musa pernah ditanya tentang anak perempuan, cucu perempuan dari anak laki-laki dan saudara perempuan, maka dia menjawab; ‘Anak perempuan mendapat separoh, saudara perempuan mendapat separoh, dan datanglah kepada Ibnu Mas’ud, niscaya dia akan sepakat denganku.’ Ibnu mas’ud kemudian ditanya dan diberi kabar dengan ucapan Abu Musa, maka ia berujar; ‘kalau begitu aku telah sesat dan tidak termasuk orang-orang yang mendapat petunjuk, saya akan memutuskan masalah itu dengan ketetapan yang diputuskan oleh Nabi , anak perempuan mendapat separoh, cucu perempuan dari anak laki-laki mendapat seperenam sebagai pelengkap dari dua pertiga, dan sisanya bagi saudara perempuan.’ Maka kami datang kepada Abu Musa dan kami mengabarkan kepadanya dengan ucapan Ibnu mas’ud, maka ia berkata; ‘Janganlah kalian bertanya kepadaku selama orang alim ditengah-tengah kalian.’</string>

    <string name="hadits5">حَدَّثَنَا سُلَيْمَانُ بْنُ حَرْبٍ حَدَّثَنَا وُهَيْبٌ عَنْ ابْنِ طَاوُسٍ عَنْ أَبِيهِ عَنْ ابْنِ عَبَّاسٍ رَضِيَ اللَّهُ عَنْهُمَا عَنْ النَّبِيِّ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ قَالَ أَلْحِقُوا الْفَرَائِضَ بِأَهْلِهَا فَمَا بَقِيَ فَلِأَوْلَى رَجُلٍ ذَكَرٍ</string>
    <string name="trjm_hadits5">(BUKHARI – 6240) : Telah menceritakan kepada kami Sulaiman bin Harb telah menceritakan kepada kami Wuhaib dari Ibnu Thawus dari ayahnya dari Ibnu ‘Abbas radliallahu ‘anhuma, dari Nabi  bersabda: “Berikanlah bagian fara`idh (warisan yang telah ditetapkan) kepada yang berhak, maka bagian yang tersisa bagi pewaris lelaki yang paling dekat (nasabnya).”</string>

    <string name="hadits6">حَدَّثَنَا أَبُو مَعْمَرٍ حَدَّثَنَا عَبْدُ الْوَارِثِ حَدَّثَنَا أَيُّوبُ عَنْ عِكْرِمَةَ عَنْ ابْنِ عَبَّاسٍ قَالَ أَمَّا الَّذِي قَالَ رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ لَوْ كُنْتُ مُتَّخِذًا مِنْ هَذِهِ الْأُمَّةِ خَلِيلًا لَاتَّخَذْتُهُ وَلَكِنْ خُلَّةُ الْإِسْلَامِ أَفْضَلُ أَوْ قَالَ خَيْرٌ فَإِنَّهُ أَنْزَلَهُ أَبًا أَوْ قَالَ قَضَاهُ أَبًا</string>
    <string name="trjm_hadits6">(BUKHARI – 6241) : Telah menceritakan kepada kami Abu Ma’mar telah menceritakan kepada kami Abdul Warits telah menceritakan kepada kami Ayyub dari Ikrimah dari Ibnu ‘Abbas mengatakan; yang disabdakan Rasulullah  ialah; “kalaulah aku mengambil seseorang dari umat ini untuk menjadi kekasih niscaya aku mengambilnya, namun persaudaraan Islam lebih utama -atau beliau bersabda: – lebih baik, ” kemudian beliau menempatkannya sebagai ayah atau memutuskannya sebagai ayah.</string>
</resources>


