<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.zakafikry.ewaris.Introduction.DalilActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dalil-dalil yang Menjadi Dasar Pengambilan Hukum Waris"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="1. Al-Quran"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ayat1"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnPlay1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/playpause" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/annisa11"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/trjm_ayat1"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/ayat2"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnPlay2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:background="@drawable/playpause" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/annisa12"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/trjm_ayat2"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/ayat3"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnPlay3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:background="@drawable/playpause" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/annisa176"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/trjm_ayat3"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="2. Hadits Rasul"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Karena banyaknya hadits yang membahas tentang bab waris/faraidh, maka kami hanya akan menyebutkan beberapa saja."
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Shahih Bukhori: 6235"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hadits1"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trjm_hadits1"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Shahih Bukhori: 6237"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hadits2"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trjm_hadits2"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Shahih Bukhori: 6238"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hadits3"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trjm_hadits3"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Shahih Bukhori: 6239"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hadits4"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trjm_hadits4"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Shahih Bukhori: 6240"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hadits5"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trjm_hadits5"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="Shahih Bukhori: 6241"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hadits6"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trjm_hadits6"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>


    </ScrollView>


</RelativeLayout>
