<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.zakafikry.ewaris.IntroActivity.FaraidhActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apa itu  Faraidh"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descWFaraidh"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Ilmu Faraidh"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descIlmuFaraidh"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Hukum Mempelajari Ilmu Faraidh"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descHukumFaraidh"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Tata Cara Pembagian Harta Warisan"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. Menentukan jumlah total harta peninggalan (Tirkah)"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Menunaikan semua kewajiban yang menjadi tanggungan orang yang meninggal (muwarrits), mulai dari hutang, wasiat, dan juga biaya pemakaman (tajhiz) apabila ahli waris berkenan"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. Menentukan jumlah total harta yang siap untuk dibagikan (Al-Irts)"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4. Menentukan anggota ahli waris yang berhak mendapatkan bagian warisan (ahli waris yang tidak terhalang/mahjub)"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5. Membagikan harta warisan kepada para ahli waris Ashabul Furudh [1]"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6. Setelah ketemu sisanya, lalu dibagikan kepada para ahli waris Ashobah [2]"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7. Apabila tidak ada ahli waris Ashobah, dan harta masih tersisa, maka diberlakukan kaidah Radd [3]"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8. Apabila harta yang dibagikan kepada para Ashabul Furudh ternyata kurang, maka diberlakukan kaidah A'ul [4]"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9. Apabila setelah semua harta waris telah dibagikan kepada orang-orang yang berhak menerimanya, dan masih tersisa, maka sisa-nya dibagikan kepada dzawil arham [5] atau diserahkan kepada baitul maal."
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Keterangan Tambahan"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[1]" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[2]" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[3]" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[4]" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[5]" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>

